--- a/src/sass/_site-element.sass
+++ b/src/sass/_site-element.sass
@@ -81,9 +81,11 @@ input, textarea
 // --------------------------------
 .table
   width: 100%
+  margin: 1em 0
   thead,tbody
     th,td
       padding: 1em
+      vertical-align: middle
       text-align: left
       border-bottom: 1px solid #efefef
   thead
@@ -91,3 +93,4 @@ input, textarea
       th,td
         font-weight: bold
         background: #efefef
+
