--- a/src/sass/_site-module.sass
+++ b/src/sass/_site-module.sass
@@ -39,6 +39,23 @@
 // --------------------------------------------------
 // table
 // --------------------------------------------------
+.table
+  width: 100%
+  margin: 2em 0 1em
+  thead,tbody
+    th,td
+      border: 1px solid #efefef
+    td
+      text-align: center
+  tbody
+    th
+      width: 50%
+    td
+      width: 10%
+    .true
+      background: #833
+      color: #000
+
 
 // --------------------------------------------------
 // icon
@@ -57,3 +74,19 @@
     padding: 10px
     -webkit-border-radius: 6px
     border-radius: 6px
+
+.type
+  display: inline-block
+  padding: 0.2em 0.4em
+  background: #ccc
+  color: #eee
+  font-size: 0.7em
+  -webkit-border-radius: 2px
+  border-radius: 2px
+
+.type-html
+  background: #F1652C
+.type-css
+  background: #2EB1E7
+.type-javascript
+  background: #F2C026
