--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,6 +15,8 @@
 // 共通ライブラリ
 @import "common/utility"
 @import "common/utility-css3"
+@import "common/angular"
+// angularJS使う場合
 
 // 要素とか
 @import "site-element"
