--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ a:hover {
   clear: both;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 body {
   background: #333333;
   color: #bbbbbb;
@@ -644,7 +648,17 @@ h3 {
   text-align: center;
 }
 .table tbody th {
+  zoom: 1;
   width: 50%;
+}
+.table tbody th:before, .table tbody th:after {
+  content: "\0020";
+  display: block;
+  height: 0;
+  overflow: hidden;
+}
+.table tbody th:after {
+  clear: both;
 }
 .table tbody td {
   width: 10%;
@@ -659,6 +673,18 @@ h3 {
   padding: 10px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
+}
+
+.icon, .desc {
+  float: left;
+}
+
+.icon {
+  margin-right: 10px;
+}
+
+.desc {
+  width: 280px;
 }
 
 .type {
@@ -695,3 +721,5 @@ h3 {
     font-size: 1.4em;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
