--- a/src/index.jade
+++ b/src/index.jade
@@ -3,8 +3,8 @@ html(ng-app)
   head
     meta(name="viewport",content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no")
     meta(charset="UTF-8")
-    link(rel="stylesheet",href="libs/font-awesome/css/font-awesome.min.css")
-    link(rel="stylesheet",href="style.css")
+    link(rel="stylesheet",href="/libs/font-awesome/css/font-awesome.min.css")
+    link(rel="stylesheet",href="/style.css")
     title IEEEeee!!!
 
   body
@@ -53,11 +53,9 @@ html(ng-app)
     footer.pageFooter
       p.copyright Created by <a href="http://anticyb.org/" target="_blank">muyuu</a>
 
-    script(src="libs/labjs/LAB.min.js")
+    script(src="/libs/labjs/LAB.min.js")
     script.
       $LAB
-      //- .script("libs/jquery/jquery.min.js").wait()
-      //- .script("libs/pocket/pocket.min.js").wait()
-      .script("libs/angular/angular.min.js").wait()
-      .script("app.js");
+      .script("/libs/angular/angular.js").wait()
+      .script("/app.js");
 
